# mcp

./: .cursorignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  GEMINI.md  README.md  REFACTORING.md  browser_automation.py  demo_plugin_config.py  install.sh  main.py  plugin_config.yaml  pyproject.toml  run_tests.sh  setup.py  start_server.sh  startup_timing_report.json  test_api_refactor.py  test_background_job.py  test_environment.py  test_parallel_stress.py  test_private_tool_root.py  test_tasks.py
.claude/: CLAUDE.md  settings.json
.cursor/: environment.json  mcp.json
.cursor/rules/: cr.mdc  extract_commit_info.mdc  general.mdc  generate_github_issue.mdc  github_issue_planning.mdc  github_issue_workflow.mdc  python.mdc  uv.mdc
.github/prompts/: github_issue_workflow.prompt.md  submit.prompt.md
.github/workflows/: ci.yml  daily-version.yml  extension-ci.yml  neo4j-tests.yml  package-extension.yml  release.yml  security.yml  tests.yml  vscode-extension-ci.yml
.kiro/steering/: product.md  structure.md  tech.md
.prompts/: code_review.prompt.md  extract_commit_info.prompt.md  generate_github_issue.prompt.md  github_issue_planning.prompt.md
.windsurf/rules/: cr.md  doc.md  general.md  python.md
app/: README.md  index.html
app/src/: main.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
config/: README.md  __init__.py  env.template  manager.py  neo4j.yaml  types.py
config/tests/: README.md  __init__.py  run_tests.py  test_environment_integration.py  test_manager.py  test_types.py
docker/neo4j/: Dockerfile  docker-compose.yml
docs/: architecture_analysis_mcp_core_tools_merge.md  background_jobs_api.md  config_overview.md  docker.md  mcp_progress_migration_summary.md  mcp_tools_overview.md  security_filtering.md  session_unification_plan.md  tool_history_api.md  tool_management.md  utils_overview.md
graphrag/: PLAN.md  __init__.py
mcp_core/: __init__.py  pyproject.toml  setup.py  tools_adapter.py  types.py
mcp_core/tests/: README.md  run_tests.py  test_conversion.py  test_tools.py  test_types.py
mcp_tools/: README.md  __init__.py  concurrency_manager.py  constants.py  dependency.py  image_tool.py  interfaces.py  output_limiter.py  plugin.py  plugin_config.py  plugin_manager.py  pyproject.toml  time_util.py  tool.example.yaml  tools.py  types.py  yaml_tools.py
mcp_tools/azrepo/: __init__.py  client.py  types.py
mcp_tools/browser/: README.md  __init__.py  browser_client.py  capture_panels_client.py  client.py  factory.py  interface.py  playwright_client.py  playwright_script_runner.py  selenium_client.py  types.py
mcp_tools/command_executor/: __init__.py  concurrency_manager.py  executor.py  rate_limiter.py  resource_monitor.py  temp_file_manager.py  tmux_executor.py  types.py  utils.py
mcp_tools/dataframe_query/: README.md  __init__.py  tool.py
mcp_tools/dataframe_service/: __init__.py  tool.py
mcp_tools/docs/: README.md  async_job_framework.md  creating_tools.md  dependency_injection.md
mcp_tools/environment/: __init__.py  manager.py  types.py
mcp_tools/kusto/: __init__.py  client.py
mcp_tools/kv_store/: __init__.py  tool.py
mcp_tools/tests/: README.md  conftest.py  conftest_browser.py  run_tests.py  test_browser_client_options.py  test_browser_cookie_retrieval.py  test_browser_factory.py  test_browser_utils.py  test_code_tools_coverage.py  test_code_tools_enhanced.py  test_command_executor.py  test_command_executor_async.py  test_command_executor_integration.py  test_concurrency_manager.py  test_conversion.py  test_dataframe_query_tool.py  test_dataframe_service_tool.py  test_dependency_injector.py  test_image_tool.py  test_job_history_persistence.py  test_kusto_client.py  test_kv_store.py  test_memory_management.py  test_output_limiter.py  test_playwright_script_runner.py  test_playwright_script_runner_mock.py  test_playwright_wrapper.py  test_plugin_config.py  test_plugin_registry.py  test_post_processing.py  test_rate_limiting_concurrency.py  test_run_to_completion.py  test_run_to_completion_integration.py  test_security_filtering.py  test_tasks.py  test_time.py  test_tmux_executor.py  test_tool_argument_validation.py  test_tool_enabled_flag.py  test_tool_error_handling.py  (+11 more)
mcp_tools/tests/fixtures/: invalid_types.yaml  malformed.yaml  missing_fields.yaml  no_tools_section.yaml  test_fixtures.py  valid_tools.yaml
mcp_tools/tests/fixtures/scripts/: test_deploy.ps1  test_deploy.sh  test_security_demo.sh
mcp_tools/time/: README.md  __init__.py  time_util.py  tool.py
plugins/: .gitignore  README.md  __init__.py
prompt/: extract_commit_info.md  github_issue_workflow.md
scripts/: .gitignore  azure_identity_cli.py  browser_cli.py  code_analyzer.sh  dashgrab.py  extract_charts_tool1.py  extract_charts_tool2.py  extract_text_from_image.py  format.sh  generate_ctags.sh  generate_embedding.py  get_website_cookies.py  gh_copilot_chat.py  install.bat  install.ps1  install.sh  logcompress_cli.py  mcp_service.ps1  neo4j-backup.sh  neo4j-dev-setup.sh  neo4j-reset.sh  package-wu-wei.sh  playwright_cli.py  run_component_group.sh  run_tests.bat  run_tests.ps1  run_tests.sh  segmenter_cli.py  start_server.sh  submit.sh  test-semantic-release.sh
sentinel/: README.md  __init__.py  pytest.ini  requirements.txt  run_tests.ps1  run_tests.sh  setup.py
server/: README.md  __init__.py  api.py  api_old.py  azrepo_utils.py  browser_utils.py  command_executor.py  compatibility.py  environment.py  fast-main.py  image_tool.py  main.py  mcp_progress_handler.py  prompts.py  prompts.yaml  requirements.txt  startup_tracer.py  test_deploy.ps1  test_deploy.sh  test_tools.py  tool_history_manager.py  tool_result_processor.py  tools.py  tools.yaml  validate_config.ps1  validate_config.sh
server-ui/: README.md  index.html  package.json
tests/: __init__.py
utils/: __init__.py
wu-wei/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.js  package-extension.sh  package-lock.json  package.json  tsconfig.integration.json  tsconfig.json  tsconfig.unit.json
(+716 files in other folders)
