[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-core"
version = "0.1.0"
description = "Core MCP functionality and adapters"
authors = [
    {name = "Yiheng Tao", email = "example@example.com"}
]
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Dependencies are specified but installed separately to avoid circular dependencies
dependencies = []

[tool.setuptools.packages.find]
where = ["."] 