[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-tools"
version = "0.1.0"
description = "Tool modules for MCP"
authors = [
    {name = "Yiheng Tao", email = "example@example.com"}
]
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "selenium>=4.0.0",
    "webdriver-manager>=3.0.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pyyaml>=6.0.2",
    "detect-secrets>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."] 
